fix: increase spacing between sections on home screen

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,7 +1,7 @@
 .section {
   margin-left: 1rem;
   margin-right: 1rem;
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
 
   &:first-child {
     margin-top: 1rem !important;
